--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,9 +5,9 @@
 @import 'base/mixins';
 
 * {
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .container{
@@ -15,8 +15,16 @@
 	margin: 0 auto;
 }
 
+.divider{
+  width: 60px;
+  height: 3px;
+  background-color: $main-color;
+  margin-top: 25px;
+}
+
 @import 'blocks/promo';
 @import 'blocks/title';
 @import 'blocks/button';
 @import 'blocks/sidepanel';
 @import 'blocks/menu';
+@import 'blocks/about';
